--- a/Code/.env
+++ b/Code/.env
@@ -38,5 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=xxx
+MAILER_DSN=smtp://3d04ce8b5b342b:25674150a1bbe7@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
