--- a/Code/config/services.yaml
+++ b/Code/config/services.yaml
@@ -21,5 +21,8 @@ services:
       - "../src/Entity/"
       - "../src/Kernel.php"
 
+  App\EventListener\Redirect404ToHomepageListener:
+    tags:
+      - { name: kernel.event_listener, event: kernel.exception }
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
