--- a/Code/.env
+++ b/Code/.env
@@ -38,5 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=xxx
+MAILER_DSN=smtp://xx@sandbox.smtp.mailtrap.io:xxxx
 ###< symfony/mailer ###
